--- a/Static GUI/CSE201_v1/src/address/view/LoginOverview.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/LoginOverview.fxml
@@ -6,6 +6,7 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -19,7 +20,7 @@
             <Image url="@../../../../../../Desktop/1.jpg" />
          </image>
       </ImageView>
-      <Pane layoutX="63.0" layoutY="176.0" prefHeight="370.0" prefWidth="403.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="174.0">
+      <Pane layoutX="30.0" layoutY="176.0" prefHeight="403.0" prefWidth="436.0" style="-fx-background-color: #ffffff;" AnchorPane.bottomAnchor="174.0">
          <children>
             <JFXRadioButton layoutX="79.0" layoutY="164.0" text="Student" />
             <JFXRadioButton layoutX="79.0" layoutY="196.0" text="Admin" />
@@ -35,6 +36,7 @@
                   <DropShadow />
                </effect>
             </Pane>
+            <Button layoutX="204.0" layoutY="256.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="152.0" text="Forgot Password" />
          </children>
          <effect>
             <DropShadow blurType="GAUSSIAN" />
