--- a/Static GUI/CSE201_v1/src/address/view/LoginOverview.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/LoginOverview.fxml
@@ -15,7 +15,7 @@
 
 <AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="address.view.LoginOverviewController">
    <children>
-      <ImageView fitHeight="719.0" fitWidth="959.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="723.0" fitWidth="858.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="102.0" AnchorPane.topAnchor="-4.0">
          <image>
             <Image url="@../../../../../../Desktop/1.jpg" />
          </image>
@@ -25,7 +25,7 @@
             <JFXRadioButton layoutX="79.0" layoutY="164.0" text="Student" />
             <JFXRadioButton layoutX="79.0" layoutY="196.0" text="Admin" />
             <JFXRadioButton layoutX="230.0" layoutY="164.0" text="Faculty" />
-            <JFXButton fx:id="loginButton" buttonType="RAISED" layoutX="69.0" layoutY="257.0" onAction="#makeLogin" prefHeight="37.0" prefWidth="105.0" ripplerFill="WHITE" style="-fx-background-color: #2196F3;" text="Login" />
+            <JFXButton fx:id="loginButton" buttonType="RAISED" layoutX="69.0" layoutY="257.0" prefHeight="37.0" prefWidth="105.0" ripplerFill="WHITE" style="-fx-background-color: #2196F3;" text="Login" />
             <!--<MobileLayoutPane layoutX="68.0" layoutY="123.0" />-->
             <Pane layoutX="18.0" layoutY="25.0" prefHeight="120.0" prefWidth="373.0" style="-fx-background-color: #ccd5e0;">
                <children>
