--- a/Static GUI/CSE201_v1/src/address/view/signUpPopUpWindow.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/signUpPopUpWindow.fxml
@@ -9,16 +9,27 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="address.view.SignUpPopUpWindowController">
+<AnchorPane id="AnchorPane" prefHeight="197.0" prefWidth="315.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="address.view.SignUpPopUpWindowController">
    <children>
-      <VBox layoutX="157.0" layoutY="132.0" prefHeight="184.0" prefWidth="315.0">
+      <VBox alignment="CENTER" prefHeight="238.0" prefWidth="315.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
+            <Label prefHeight="43.0" prefWidth="266.0" text="Enter the OTP sent to your E-Mail ID">
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Label>
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
                   <JFXTextField prefHeight="43.0" prefWidth="203.0" promptText="Enter OTP">
                      <HBox.margin>
                         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                      </HBox.margin>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
                   </JFXTextField>
                   <Button mnemonicParsing="false" prefHeight="46.0" prefWidth="116.0" text="Enter">
                      <HBox.margin>
@@ -26,9 +37,14 @@
                      </HBox.margin>
                   </Button>
                </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
             </HBox>
          </children>
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
       </VBox>
-      <Label layoutX="167.0" layoutY="42.0" prefHeight="43.0" prefWidth="266.0" text="Enter the OTP sent to your E-Mail ID" />
    </children>
 </AnchorPane>
