--- a/Static GUI/CSE201_v1/src/address/view/FacultyLogin.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/FacultyLogin.fxml
@@ -55,7 +55,7 @@
                                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                    </HBox.margin>
                                                 </Text>
-                                                <TextField prefHeight="32.0" prefWidth="392.0">
+                                                <TextField fx:id="facultyName" prefHeight="32.0" prefWidth="392.0">
                                                    <HBox.margin>
                                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                                    </HBox.margin>
