--- a/Static GUI/CSE201_v1/src/address/view/StudentLogin.fxml
+++ b/Static GUI/CSE201_v1/src/address/view/StudentLogin.fxml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXTimePicker?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -241,7 +239,7 @@
                <content>
                   <AnchorPane>
                      <children>
-                        <ListView prefHeight="681.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                        <ListView layoutX="-14.0" prefHeight="681.0" prefWidth="960.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="0.0" />
                         <TableView layoutX="121.0" layoutY="104.0" prefHeight="188.0" prefWidth="794.0" AnchorPane.leftAnchor="121.0">
                            <columns>
                               <TableColumn prefWidth="92.33332824707031" text="S.No." />
@@ -267,48 +265,36 @@
                                     </Text>
                                  </children>
                               </HBox>
-                              <TextField prefHeight="27.0" prefWidth="189.0" promptText="Room No.">
+                              <TextField fx:id="BookRoom_RoomNumber_StudentLogin" prefHeight="27.0" prefWidth="189.0" promptText="Room No.">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <TextField fx:id="BookRoom_DesiredCapacity_StudentLogin1" prefHeight="25.0" prefWidth="432.0" promptText="Desired Capacity">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <TextField fx:id="BookRoom_StartTime_StudentLogin" prefHeight="25.0" prefWidth="432.0" promptText="Start Time : HH - MM (24 hour)">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <TextField fx:id="BookRoom_EndTime_StudentLogin" prefHeight="25.0" prefWidth="432.0" promptText="End Time : HH - MM (24 hour)">
                                  <VBox.margin>
                                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                  </VBox.margin>
                               </TextField>
                               <HBox prefHeight="37.0" prefWidth="433.0">
                                  <children>
-                                    <TextField prefHeight="25.0" prefWidth="432.0" promptText="Desired Capacity">
+                                    <TextField fx:id="BookRoom_DesiredCapacity_StudentLogin" prefHeight="25.0" prefWidth="432.0" promptText="Current Date : DD-MM-YY">
                                        <HBox.margin>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </HBox.margin>
                                     </TextField>
                                  </children>
                               </HBox>
-                              <HBox prefHeight="52.0" prefWidth="597.0">
-                                 <children>
-                                    <JFXTimePicker prefHeight="33.0" prefWidth="227.0" promptText="Start Time">
-                                       <HBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </HBox.margin>
-                                    </JFXTimePicker>
-                                    <JFXTimePicker prefHeight="33.0" prefWidth="209.0" promptText="End Time">
-                                       <HBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </HBox.margin>
-                                    </JFXTimePicker>
-                                 </children>
-                              </HBox>
-                              <HBox layoutX="10.0" layoutY="93.0" prefHeight="52.0" prefWidth="597.0">
-                                 <children>
-                                    <DatePicker prefHeight="28.0" prefWidth="210.0" promptText="Start Date">
-                                       <HBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </HBox.margin>
-                                    </DatePicker>
-                                    <DatePicker prefHeight="28.0" prefWidth="223.0" promptText="End Date">
-                                       <HBox.margin>
-                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                       </HBox.margin>
-                                    </DatePicker>
-                                 </children>
-                              </HBox>
+                              <HBox layoutX="10.0" layoutY="93.0" prefHeight="52.0" prefWidth="597.0" />
                               <HBox prefHeight="37.0" prefWidth="491.0">
                                  <children>
                                     <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Book" wrappingWidth="199.4700469970703">
@@ -319,7 +305,7 @@
                                           <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
                                        </HBox.margin>
                                     </Text>
-                                    <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="129.0" text="Button">
+                                    <Button fx:id="BookRoom_BookButton_StudentLogin" mnemonicParsing="false" onAction="#onClickRequestRoomButtonFromStudent" prefHeight="44.0" prefWidth="129.0" text="Button">
                                        <HBox.margin>
                                           <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                        </HBox.margin>
@@ -328,7 +314,7 @@
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0">
                                  <children>
-                                    <TextArea prefHeight="58.0" prefWidth="490.0" promptText="Purpose">
+                                    <TextArea fx:id="BookRoom_Purpose_StudentLogin" prefHeight="58.0" prefWidth="490.0" promptText="Purpose">
                                        <font>
                                           <Font size="20.0" />
                                        </font>
